--- a/.github/workflows/main.zig.yml
+++ b/.github/workflows/main.zig.yml
@@ -18,7 +18,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        zig: [ 0.11.0, 0.10.0, master ]
+        zig: [ 0.11.0, master ]
         os: [ ubuntu-latest, windows-latest, macos-latest ]
     runs-on: ${{ matrix.os }}
     name: Zig ${{ matrix.zig }} on ${{ matrix.os }}
